@@ -14,6 +14,8 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static com.mungta.accusation.api.dto.AccusationPartyMemberListResponse.MemberResponse;
@@ -44,7 +46,8 @@ class AccusationPartyMembersServiceTest {
     void getAccusationPartyMembers() {
         given(partyServiceClient.getParty(PARTY_ID)).willReturn(getPartyResponse());
         given(userServiceClient.getUserList(anyList())).willReturn(getUserResponseList());
-        given(accusationRepository.findByMemberIdAndPartyInfo(anyString(), any())).willReturn(List.of());
+        //given(accusationRepository.findByMemberIdAndPartyInfo(anyString(), any())).willReturn(List.of());
+        given(accusationRepository.findByMemberIdAndPartyInfo(anyString(), any())).willReturn(new ArrayList<>());
 
         AccusationPartyMemberListResponse response = accusationPartyMembersService.getAccusationPartyMembers(MEMBER_ID, PARTY_ID);
 
@@ -73,7 +76,8 @@ class AccusationPartyMembersServiceTest {
                 .placeOfDeparture(PLACE_OF_DEPARTURE)
                 .destination(DESTINATION)
                 .startedDateTime(STARTED_DATE_TIME)
-                .memberIds(List.of(MEMBER_ID, ACCUSED_MEMBER_ID))
+                //.memberIds(List.of(MEMBER_ID, ACCUSED_MEMBER_ID))
+                .memberIds(Arrays.asList(MEMBER_ID, ACCUSED_MEMBER_ID))
                 .build();
     }
 
@@ -84,7 +88,8 @@ class AccusationPartyMembersServiceTest {
                 .emailAddress(ACCUSED_MEMBER_EMAIL)
                 .image(new byte[0])
                 .build();
-        return List.of(userResponse);
+        //return List.of(userResponse);
+        return Arrays.asList(userResponse);
     }
 
 }
